tests/snapshots/yaml_suite_snapshots__yaml_suite_6JQW_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: "Spec Example 2.13. In literals, newlines are preserved"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2759963"
  tags: spec scalar literal comment
  yaml: "# ASCII Art\n--- |\n  \\//||\\/||\n  // ||  ||__\n"
  tree: "+STR\n +DOC ---\n  =VAL |\\\\//||\\\\/||\\n// ||  ||__\\n\n -DOC\n-STR\n"
  json: "\"\\\\//||\\\\/||\\n// ||  ||__\\n\"\n"
  dump: "--- |\n  \\//||\\/||\n  // ||  ||__\n"
