tests/snapshots/yaml_suite_snapshots__yaml_suite_6JQW_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- |\n  \\//||\\/||\n  // ||  ||__\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2759963"
  json: "\"\\\\//||\\\\/||\\n// ||  ||__\\n\"\n"
  name: "Spec Example 2.13. In literals, newlines are preserved"
  tags: spec scalar literal comment
  tree: "+STR\n +DOC ---\n  =VAL |\\\\//||\\\\/||\\n// ||  ||__\\n\n -DOC\n-STR\n"
  yaml: "# ASCII Art\n--- |\n  \\//||\\/||\n  // ||  ||__\n"
