tests/snapshots/yaml_suite_snapshots__yaml_suite_6JTT_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow sequence without closing bracket
  from: "@perlpunk"
  tags: error flow sequence
  fail: true
  yaml: "---\n[ [ a, b, c ]\n"
  tree: "+STR\n +DOC ---\n  +SEQ []\n   +SEQ []\n    =VAL :a\n    =VAL :b\n    =VAL :c\n   -SEQ\n"
