tests/snapshots/yaml_suite_snapshots__yaml_suite_6JTT_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Flow sequence without closing bracket
  tags: error flow sequence
  tree: "+STR\n +DOC ---\n  +SEQ []\n   +SEQ []\n    =VAL :a\n    =VAL :b\n    =VAL :c\n   -SEQ\n"
  yaml: "---\n[ [ a, b, c ]\n"
