tests/snapshots/yaml_suite_snapshots__yaml_suite_6KGN_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Anchor for empty node
  from: "https://github.com/nodeca/js-yaml/issues/301"
  tags: alias anchor
  yaml: "---\na: &anchor\nb: *anchor\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL &anchor :\n   =VAL :b\n   =ALI *anchor\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"a\": null,\n  \"b\": null\n}\n"
  dump: "---\na: &anchor\nb: *anchor\n"
